@@ -10,6 +10,9 @@
 * Added the ability to obtain user_ids from Groups_Group.
 * Improved the performance when obtaining users from Groups_Group.
 * Adjusted the signature of the Groups_User constructor to use null as default for its $user_id argument.
+* Added methods in Groups_Post_Access to get and set which post types Groups should handle.
+* Changed the default assumption to handle only post types that are 'public' by default. Others are not handled by default.
+* Updated the Options to show all available post types.
 
 = 2.1.2 =
 * Fixed a warning that came up when the post type in a query is provided as an array indicating multiple post types.
